Tue Apr 20 11:24:18 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (str_dump): `#' should be escaped.

Mon Apr 19 18:56:21 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (IS_A_LETTER): a byte sequence shorter than mbc should
	  not match with \w etc.

Fri Apr 16 21:40:43 1999  Nobuetsu Nokada  <gea02117@nifty.ne.jp>

	* io.c (f_backquote): pipe_open may return nil.

	* io.c (f_open): io_open may return nil.

	* io.c (io_s_foreach): ditto.

	* io.c (io_s_readlines): ditto.

	* io.c (io_defset): wrong message.

Tue Apr 13 14:59:25 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.2.5 (stable) released.

Mon Apr 12 23:12:32 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.c (rb_io_reopen): check for reopening same IO.

Thu Apr  8 18:10:37 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* version 1.2.4 (stable) released.

Tue Apr  6 17:33:00 1999  Inaba Hiroto  <inaba@st.rim.or.jp>

	* eval.c (rb_eval): flip3 did not work properly.

Tue Apr  6 14:02:39 1999  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* re.c (reg_match): should return false, not nil.

	* re.c (reg_match2): ditto.

Fri Mar 12 12:27:55 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* string.c (str_index): negative offset.

	* regex.c (re_match): begline should not match at the point
	  between a newline and end-of-string.  endline neither.

	* regex.c (re_compile_pattern): context_indep_anchors.

	* parse.y (parse_regx): need not to push backslashes before
	  escaped characters.

Sun Mar  7 14:21:32 1999  IKARASHI Akira <ikarashi@itlb.te.noda.sut.ac.jp>

	* string.c (rb_str_index): wrong end point calculation.

Thu Mar  4 14:23:11 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* array.c (ary_replace_method): should replace original array

Fri Mar 19 11:26:45 1999  WATANABE Hirofumi  <watanabe@ase.ptg.sony.co.jp>

	* eval.c (ruby_run): needed to eval END{} on exit.

	* eval.c (rb_exit): ditto.

Thu Mar 18 15:47:18 1999  Yukihiro Matsumoto  <matz@netlab.co.jp>
